test/files/neg/plugin-rafter-before-1/lib/plugins.jar.desired.sha1
a3e5436fdbabef323fa19c7a44949fcda27bcda3 ?plugins.jar
